EDA en mosquitos.ipynb

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -789,11 +789,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1213418d-3e60-4405-829d-a36d5ca08947",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10357 entries, 0 to 10356\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   img_fName    10357 non-null  object\n",
+      " 1   img_w        10357 non-null  int64 \n",
+      " 2   img_h        10357 non-null  int64 \n",
+      " 3   bbx_xtl      10357 non-null  int64 \n",
+      " 4   bbx_ytl      10357 non-null  int64 \n",
+      " 5   bbx_xbr      10357 non-null  int64 \n",
+      " 6   bbx_ybr      10357 non-null  int64 \n",
+      " 7   class_label  10357 non-null  object\n",
+      "dtypes: int64(6), object(2)\n",
+      "memory usage: 647.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"phase2_train_v0.csv\")\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
