--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -932,19 +932,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "1aac449a-c2bf-4bed-8d44-8cc535887cef",
+   "execution_count": 2,
+   "id": "48048cff-7525-4c70-affa-47587488232f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m71/71\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 1s/step\n"
+     "ename": "NameError",
+     "evalue": "name 'val_generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Asegurarnos de que `true_classes` sea un numpy array\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m true_classes \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mval_generator\u001b[49m\u001b[38;5;241m.\u001b[39mclasses)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Asegurarnos de que `val_predictions` sea un numpy array de probabilidades\u001b[39;00m\n\u001b[0;32m      6\u001b[0m val_predictions \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(model\u001b[38;5;241m.\u001b[39mpredict(val_generator))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'val_generator' is not defined"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "# Asegurarnos de que `true_classes` sea un numpy array\n",
     "true_classes = np.array(val_generator.classes)\n",
     "\n",
@@ -971,15 +976,22 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import precision_recall_curve, PrecisionRecallDisplay\n",
+    "from sklearn.metrics import precision_recall_curve, auc\n",
     "\n",
-    "# Calcular precisión y recall para cada clase\n",
-    "precision, recall, _ = precision_recall_curve(true_classes.ravel(), val_predictions.ravel())\n",
+    "# Graficar precisión-recall para cada clase\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "for i, class_name in class_names.items():\n",
+    "    # Crear etiquetas binarizadas para esta clase\n",
+    "    binary_true_classes = (true_classes == i).astype(int)\n",
+    "    # Calcular precisión y recall\n",
+    "    precision, recall, _ = precision_recall_curve(binary_true_classes, val_predictions[:, i])\n",
+    "    pr_auc = auc(recall, precision)\n",
+    "    plt.plot(recall, precision, label=f'{class_name} (AUC={pr_auc:.2f})')\n",
     "\n",
-    "# Mostrar la curva de precisión-recall\n",
-    "disp = PrecisionRecallDisplay(precision=precision, recall=recall)\n",
-    "disp.plot()\n",
-    "plt.title(\"Curva de Precisión-Recall\")\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.title('Curva de Precisión-Recall')\n",
+    "plt.legend()\n",
     "plt.show()\n"
    ]
   },
@@ -1012,19 +1024,23 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_curve, auc, RocCurveDisplay\n",
+    "from sklearn.metrics import roc_curve, auc\n",
     "\n",
     "# Graficar la curva ROC para cada clase\n",
-    "for i in range(len(class_names)):\n",
-    "    fpr, tpr, _ = roc_curve(true_classes == i, val_predictions[:, i])\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "for i, class_name in class_names.items():\n",
+    "    # Crear etiquetas binarizadas para esta clase\n",
+    "    binary_true_classes = (true_classes == i).astype(int)\n",
+    "    # Calcular FPR, TPR, y AUC\n",
+    "    fpr, tpr, _ = roc_curve(binary_true_classes, val_predictions[:, i])\n",
     "    roc_auc = auc(fpr, tpr)\n",
-    "    plt.plot(fpr, tpr, label=f'{class_names[i]} (AUC = {roc_auc:.2f})')\n",
+    "    plt.plot(fpr, tpr, label=f'{class_name} (AUC={roc_auc:.2f})')\n",
     "\n",
-    "plt.plot([0, 1], [0, 1], 'k--', label=\"Línea aleatoria (AUC = 0.50)\")\n",
-    "plt.xlabel(\"Tasa de Falsos Positivos\")\n",
-    "plt.ylabel(\"Tasa de Verdaderos Positivos\")\n",
-    "plt.title(\"Curva ROC\")\n",
-    "plt.legend(loc=\"lower right\")\n",
+    "plt.plot([0, 1], [0, 1], 'k--', label=\"Línea aleatoria (AUC=0.50)\")\n",
+    "plt.xlabel('Tasa de Falsos Positivos (FPR)')\n",
+    "plt.ylabel('Tasa de Verdaderos Positivos (TPR)')\n",
+    "plt.title('Curva ROC')\n",
+    "plt.legend()\n",
     "plt.show()\n"
    ]
   },
